results/SpecGenBench/conversational/log-Calculator-2023_07_09_22_59_34.txt
public class Calculator {
    
    //@ requires operator == '+' || operator == '-' || operator == '*' || operator == '/' || operator == '%';
    //@ ensures \result == num1 + num2;
    //@ ensures \result == num1 - num2;
    //@ ensures \result == num1 * num2;
    //@ ensures \result == num1 / num2;
    //@ ensures \result == num1 % num2;
    //@ ensures \result == -1;
    public /*@ pure @*/ int calculate(int num1, int num2, char operator) {

        int output;

        switch (operator)
        {
            case '+':
            	output = num1 + num2;
                break;

            case '-':
            	output = num1 - num2;
                break;

            case '*':
            	output = num1 * num2;
                break;

            case '/':
            	output = num1 / num2;
		break;

	    case '%':
		output = num1 % num2;
                break;

            default:
                return -1;
        }
        return output;
    }
}
/home/max/Documents/JMLGPT/tmp/Calculator.java:21: verify: The prover cannot establish an assertion (ArithmeticOperationRange) in method calculate: underflow in int difference
            	output = num1 - num2;
            	              ^
1 verification failure

public class Calculator {
    
    //@ requires operator == '+' || operator == '-' || operator == '*' || operator == '/' || operator == '%';
    //@ ensures \result == num1 + num2;
    //@ ensures \result == num1 - num2;
    //@ ensures \result == num1 * num2;
    //@ ensures \result == num1 / num2;
    //@ ensures \result == num1 % num2;
    //@ ensures \result == -1;
    public /*@ pure @*/ int calculate(int num1, int num2, char operator) {

        int output;

        switch (operator)
        {
            case '+':
            	//@ assume num1 + num2 <= Integer.MAX_VALUE && Integer.MIN_VALUE <= num1 + num2;
            	output = num1 + num2;
                break;

            case '-':
            	//@ assume num1 - num2 <= Integer.MAX_VALUE && Integer.MIN_VALUE <= num1 - num2;
            	output = num1 - num2;
                break;

            case '*':
            	//@ assume num1 * num2 <= Integer.MAX_VALUE && Integer.MIN_VALUE <= num1 * num2;
            	output = num1 * num2;
                break;

            case '/':
            	//@ assume num1 / num2 <= Integer.MAX_VALUE && Integer.MIN_VALUE <= num1 / num2;
            	output = num1 / num2;
		break;

	    case '%':
		//@ assume num1 % num2 <= Integer.MAX_VALUE && Integer.MIN_VALUE <= num1 % num2;
		output = num1 % num2;
                break;

            default:
                return -1;
        }
        return output;
    }
}
/home/max/Documents/JMLGPT/tmp/Calculator.java:44: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/Calculator.java:5:) in method calculate
        return output;
        ^
/home/max/Documents/JMLGPT/tmp/Calculator.java:5: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/Calculator.java:44:
    //@ ensures \result == num1 - num2;
        ^
2 verification failures

java
public class Calculator {
    
    //@ requires operator == '+' || operator == '-' || operator == '*' || operator == '/' || operator == '%';
    //@ ensures \result == num1 + num2;
    //@ ensures \result == num1 - num2;
    //@ ensures \result == num1 * num2;
    //@ ensures \result == num1 / num2;
    //@ ensures \result == num1 % num2;
    //@ ensures \result == -1;
    public static int calculate(int num1, int num2, char operator) {

        int output;

        switch (operator)
        {
            case '+':
            	output = num1 + num2;
                break;

            case '-':
            	output = num1 - num2;
                break;

            case '*':
            	output = num1 * num2;
                break;

            case '/':
            	if (num2 != 0) {
            		output = num1 / num2;
            	} else {
            		return -1;
            	}
		break;

	    case '%':
	    	if (num2 != 0) {
	    		output = num1 % num2;
	    	} else {
	    		return -1;
	    	}
            break;

            default:
                return -1;
        }
        return output;
    }
}
/home/max/Documents/JMLGPT/tmp/Calculator.java:1: error: class, interface, enum, or record expected
java
^
1 error

public class Calculator {
    
    //@ requires operator == '+' || operator == '-' || operator == '*' || operator == '/' || operator == '%';
    //@ ensures \result == num1 + num2;
    //@ ensures \result == num1 - num2;
    //@ ensures \result == num1 * num2;
    //@ ensures \result == num1 / num2;
    //@ ensures \result == num1 % num2;
    //@ ensures \result == -1;
    public static int calculate(int num1, int num2, char operator) {

        int output;

        switch (operator)
        {
            case '+':
            	output = num1 + num2;
                break;

            case '-':
            	output = num1 - num2;
                break;

            case '*':
            	output = num1 * num2;
                break;

            case '/':
            	if (num2 != 0) {
            		output = num1 / num2;
            	} else {
            		return -1;
            	}
		break;

	    case '%':
	    	if (num2 != 0) {
	    		output = num1 % num2;
	    	} else {
	    		return -1;
	    	}
            break;

            default:
                return -1;
        }
        return output;
    }
}
/home/max/Documents/JMLGPT/tmp/Calculator.java:25: verify: The prover cannot establish an assertion (ArithmeticOperationRange) in method calculate: int multiply overflow
            	output = num1 * num2;
            	              ^
1 verification failure

public class Calculator {
    
    //@ requires operator == '+' || operator == '-' || operator == '*' || operator == '/' || operator == '%';
    //@ ensures \result == num1 + num2;
    //@ ensures \result == num1 - num2;
    //@ ensures \result == num1 * num2;
    //@ ensures \result == num1 / num2;
    //@ ensures \result == num1 % num2;
    //@ ensures \result == -1;
    public static int calculate(int num1, int num2, char operator) {

        int output;

        switch (operator)
        {
            case '+':
            	output = num1 + num2;
                break;

            case '-':
            	output = num1 - num2;
                break;

            case '*':
            	//@ assume num1 * num2 <= Integer.MAX_VALUE && Integer.MIN_VALUE <= num1 * num2;
            	output = num1 * num2;
                break;

            case '/':
            	if (num2 != 0) {
            		//@ assume num1 / num2 <= Integer.MAX_VALUE && Integer.MIN_VALUE <= num1 / num2;
            		output = num1 / num2;
            	} else {
            		return -1;
            	}
		break;

	    case '%':
	    	if (num2 != 0) {
	    		//@ assume num1 % num2 <= Integer.MAX_VALUE && Integer.MIN_VALUE <= num1 % num2;
	    		output = num1 % num2;
	    	} else {
	    		return -1;
	    	}
            break;

            default:
                return -1;
        }
        return output;
    }
}
/home/max/Documents/JMLGPT/tmp/Calculator.java:21: verify: The prover cannot establish an assertion (ArithmeticOperationRange) in method calculate: underflow in int difference
            	output = num1 - num2;
            	              ^
1 verification failure

public class Calculator {
    
    //@ requires operator == '+' || operator == '-' || operator == '*' || operator == '/' || operator == '%';
    //@ ensures \result == num1 + num2;
    //@ ensures \result == num1 - num2;
    //@ ensures \result == num1 * num2;
    //@ ensures \result == num1 / num2;
    //@ ensures \result == num1 % num2;
    //@ ensures \result == -1;
    public static int calculate(int num1, int num2, char operator) {

        int output;

        switch (operator)
        {
            case '+':
            	output = num1 + num2;
                break;

            case '-':
            	//@ assume num1 - num2 <= Integer.MAX_VALUE && Integer.MIN_VALUE <= num1 - num2;
            	output = num1 - num2;
                break;

            case '*':
            	//@ assume num1 * num2 <= Integer.MAX_VALUE && Integer.MIN_VALUE <= num1 * num2;
            	output = num1 * num2;
                break;

            case '/':
            	if (num2 != 0) {
            		//@ assume num1 / num2 <= Integer.MAX_VALUE && Integer.MIN_VALUE <= num1 / num2;
            		output = num1 / num2;
            	} else {
            		return -1;
            	}
		break;

	    case '%':
	    	if (num2 != 0) {
	    		//@ assume num1 % num2 <= Integer.MAX_VALUE && Integer.MIN_VALUE <= num1 % num2;
	    		output = num1 % num2;
	    	} else {
	    		return -1;
	    	}
            break;

            default:
                return -1;
        }
        return output;
    }
}
